--- a/README
+++ b/README
@@ -4,9 +4,9 @@ README for slitaz-doc                                                      2009
 
 English
 -------
-This package provide SliTaz documentation installed on the system by default. With
-the cooking version we just provide some tiny info, with the stable version we also
-provide the Release Notes.
+This package provides SliTaz documentation installed on the system by default. 
+With the cooking version we just provide some tiny information, with the 
+stable version we also provide the Release Notes.
 
 
 Français
