--- a/README
+++ b/README
@@ -5,7 +5,7 @@ README for slitaz-doc                                                      2009
 English
 -------
 This package provides SliTaz documentation installed on the system by default. 
-With the cooking version we just provide some tiny information, with the 
+With the cooking version we just provide some basic information, with the 
 stable version we also provide the Release Notes.
 
 
