--- a/README
+++ b/README
@@ -8,7 +8,8 @@ This package provides SliTaz documentation installed on the system by default.
 With the cooking version we just provide some basic information, with the 
 stable version we also provide the Release Notes.
 
-Desktop file are also provided to have a menu entry and an icon on users desktop.
+Desktop files are also provided to have a menu entry and an icon on the users 
+desktop.
 
 Français
 --------
