Added myself to the authors.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 Christophe Lincoln <pankso@slitaz.org>
 Paul Issot <paul@slitaz.org>
 Claudinei Pereira <claudinei@slitaz.org>
+Christian Mesh <meshca@clarkson.edu>
