Add info about Handbook in README

--- a/README
+++ b/README
@@ -1,24 +1,29 @@
-README for slitaz-doc
+SliTaz Doc
 ===============================================================================
 
 
-English
--------
 This package provides SliTaz documentation installed on the system by default. 
-With the cooking version we just provide some basic information, with the 
-stable version we also provide the Release Notes.
+With the cooking version we just provide some basic information and the
+Handbook and with the stable version we also provide the Release Notes.
 
 Desktop files are also provided to have a menu entry and an icon on the users 
 desktop.
 
-Français
---------
-Ce paquet fourni la documentation installée sur le corps du LiveCD, en
-version Cooking il donne juste quelques informations, en version stable il
-inclu les notes de publication (relnotes.html). Pour une documentation bien
-plus complète vous pouvez vous référer au site Web de SliTaz:
 
-    http://www.slitaz.org/doc/
+Handbook
+--------
+The story started with a nice and static Handbook, translated by greate
+contributors from all over the world but one day the project decided
+to put all documentation on a wiki site. It was not a so good idea, no
+change in the handbook and no more static and packagable documentation as
+well as any real official reference documentation.
+
+So in spring 2012, Claudinei asked Pankso if a new handbook would be fine.
+The anser was more than positive and the repo was created. The goal is
+to have a official documentation, unmodified by anonymous users, in pure
+HTML so it can be packages with a date string as version.
+
+We use this repos for collaboration and the mailing list.
 
 
 ===============================================================================
